// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abbr 1`] = `
"\\\\abbr{FOO}{bar}

"
`;

exports[`abbr with custom config 1`] = `
"->FOO<-

"
`;

exports[`blockquote 1`] = `
"\\\\begin{Quotation}
a quote

a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote 2`] = `
"\\\\begin{Quotation}
a quote

a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote with custom config 1`] = `
"\\\\begin{Foo}
a quote

a
multiline
quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a
multiline
quote
\\\\end{Foo}"
`;

exports[`code 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][2]{css}
.tmp {
  font-weight: bold;
}
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,3]{css}
.tmp {
  font-weight: bold;
}
\\\\end{CodeBlock}



\\\\begin{CodeBlock}{text}
a code without lang
\\\\end{CodeBlock}"
`;

exports[`code+caption 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}



\\\\begin{CodeBlock}[][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}"
`;

exports[`comments blocks 1`] = `
"Foo<--COMMENTS I am a comment COMMENTS-->bar

"
`;

exports[`custom-blocks 1`] = `
"\\\\begin{Information}
info
\\\\end{Information}


\\\\begin{Warning}
warning
\\\\end{Warning}


\\\\begin{FooBar}
secret
\\\\end{FooBar}


\\\\begin{Question}
question \\\\texttt{coded}
\\\\end{Question}


\\\\begin{Error}
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Error}[a bad error]
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Neutre}[\\\\textbf{title}]
foo
\\\\end{Neutre}"
`;

exports[`emoticon 1`] = `"foo :p bar \\\\smiley{smile}"`;

exports[`figure+caption 1`] = `
"\\\\begin{Quotation}[With Source]
a
multiline
quote
\\\\end{Quotation}



\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Nom & Age \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Fred & 39 \\\\\\\\ \\\\hline
Sam & 38 \\\\\\\\ \\\\hline
Alice & 35 \\\\\\\\ \\\\hline
Mathilde & 35 \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Nom & Age \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Fred & 39 \\\\\\\\ \\\\hline
Sam & 38 \\\\\\\\ \\\\hline
Alice & 35 \\\\\\\\ \\\\hline
Mathilde & 35 \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{Coucou}"
`;

exports[`footnotes 1`] = `
"\\\\part{mytitle A\\\\textsuperscript{\\\\ref{footnote:footnoteref}}}


\\\\footnotetext[footnoteref]{\\\\label{footnote:footnoteref} reference in title}

\\\\part{mytitle B\\\\footnote[l5c12o74]{\\\\label{footnote:l5c12o74} footnoterawhead inner}\\\\protect}


\\\\part{myti\\\\textit{tle C\\\\footnote[l7c13o112]{\\\\label{footnote:l7c13o112} foo inner}\\\\protect}}


a paragraph\\\\footnote[l9c12o138]{\\\\label{footnote:l9c12o138} footnoteRawPar inner}

"
`;

exports[`gridTable 1`] = `
"\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Sub & Headings & ABBR \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{ABBR   spanning} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{The new table ABBR [\\\\textasciicircum{}foot] with ||CTRL|| + ||S||}



*[ABBR]: abbreviation



[\\\\textasciicircum{}foot]: a foot



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 2}|p{\\\\dimexpr(\\\\linewidth) / 2}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & image \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
space & \\\\image{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 2}|p{\\\\dimexpr(\\\\linewidth) / 2}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & code \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
inline & \\\\texttt{inline} br \\\\par \\\\texttt{inline} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
block & [] \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{E} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{E} &  \\\\\\\\ \\\\cline{2-4}
\\\\rowfont[l]{}
 & F & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / \\\\number-of-column}|}{G} \\\\\\\\ \\\\hline
a & b & \\\\multirow{2}{*}{c   d \\\\par  \\\\par g} \\\\\\\\ \\\\cline{1-2}
e & f &  &  \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{Table Headings} & Here \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Sub & Headings & Too \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{column[\\\\textasciicircum{}foot]} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{E} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{3}{*}{A} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{B} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & C & D \\\\\\\\ \\\\cline{2-3}
 & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / \\\\number-of-column}|}{E} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{E} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{F} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|p{\\\\dimexpr(\\\\linewidth) * 4 / 4}|}{G} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{4}{|p{\\\\dimexpr(\\\\linewidth) * 4 / 4}|}{A} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{B} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
H & \\\\multicolumn{16}{|p{\\\\dimexpr(\\\\linewidth) * 16 / 18}|}{} & He \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Li & Be & \\\\multirow{2}{*}{} & B & C & N & O & F & Ne \\\\\\\\ \\\\cline{1-2} \\\\cline{13-18}
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\ \\\\hline
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\ \\\\hline
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\ \\\\hline
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\ \\\\hline
Fr & Ra & ACT & \\\\multicolumn{15}{|p{\\\\dimexpr(\\\\linewidth) * 15 / 18}|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{18}{|p{\\\\dimexpr(\\\\linewidth) * 18 / 18}|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|p{\\\\dimexpr(\\\\linewidth) * 3 / 18}|}{Lanthanide} & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|p{\\\\dimexpr(\\\\linewidth) * 3 / 18}|}{Actinide} & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 1}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the end



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 1}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
a & \\\\multirow{2}{*}{} &  \\\\\\\\ \\\\cline{1-1}
\\\\rowfont[l]{}
b &  &  & c \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{multirow}



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 5}|p{\\\\dimexpr(\\\\linewidth) / 5}|p{\\\\dimexpr(\\\\linewidth) / 5}|p{\\\\dimexpr(\\\\linewidth) / 5}|p{\\\\dimexpr(\\\\linewidth) / 5}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 5}|}{span} & header & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 5}|}{span} \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
elem & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 5}|}{span middle} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 5}|}{} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\part{Annexes}


\\\\footnote{\\\\label{appendix-1}}
\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}"
`;

exports[`heading 1`] = `
"\\\\part{first level title}


\\\\chapter{second level title}


\\\\section{third level title}


\\\\subsection{fourth level title}


\\\\subsubsection{fifth level title}


\\\\paragraph{sixth level title}


\\\\part{a \\\\textbackslash{} b}


\\\\part{a \\\\} b}


\\\\part{a \\\\} \\\\textbackslash{} b}


\\\\part{a \\\\} b}
"
`;

exports[`heading with custom config 1`] = `
"\\\\LevelOneTitle{first level title}


\\\\LevelTwoTitle{second level title}


\\\\LevelThreeTitle{third level title}


\\\\LevelFourTitle{fourth level title}


\\\\LevelFiveTitle{fifth level title}


\\\\LevelSixTitle{sixth level title}


\\\\LevelOneTitle{a \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}


\\\\LevelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}
"
`;

exports[`html nodes 1`] = `
"\\\\part{foo}


\\\\textbf{something <a> else}

"
`;

exports[`inline-code 1`] = `
"a paragraph \\\\texttt{with inline code}.



\\\\texttt{a
multiline
inlinecode}



\\\\texttt{a code with \\\\textbackslash{}}



\\\\texttt{a \\\\textbackslash{}text in \\\\textbackslash{}LaTeX \\\\textbackslash{}\\\\textbackslash{}}"
`;

exports[`link 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`link with special characters 1`] = `"\\\\externalLink{foo}{http://example.com?a=b\\\\%c\\\\textasciicircum{}\\\\{\\\\}\\\\#foo}"`;

exports[`link-prepend 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`list 1`] = `
"\\\\begin{itemize}
\\\\item an
\\\\item \\\\textbf{unordered}
\\\\item list
\\\\end{itemize}


\\\\begin{enumerate}
\\\\item an
\\\\item \\\\texttt{ordered}
\\\\item list
\\\\end{enumerate}"
`;

exports[`math 1`] = `
"A sentence ($S$) with \\\\textit{italic} and inline math ($C_L$) and $b$ another.



\\\\[ L = \\\\frac{1}{2} \\\\rho v^2 S C_L \\\\]



hehe

"
`;

exports[`mix-1 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


foo \\\\\\\\
bar



Disrupt \\\\sout{asymmetrical} unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue \\\\textbf{bottle craft} beer hexagon artisan. Chia gochujang crucifix, \\\\textsuperscript{ready} \\\\textsuperscript{made} hammock \\\\textit{blog succulents} sriracha raw denim scenester cray typewriter fashion axe \\\\textsubscript{art} \\\\textit{party}. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street \\\\textsubscript{art} typewriter.



\\\\chapter{\\\\textit{second} 1}


\\\\textbf{Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street \\\\textsubscript{art} synth. Godard synth truffaut selfies, vape fanny \\\\sout{pack} subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial \\\\textit{YOLO}. Williamsburg salvia photo booth \\\\textsuperscript{readymade} listicle man braid.}



\\\\horizontalLine



\\\\begin{Quotation}[Guru]
Marfa pickled helvetica put a bird on it hot chicken williamsburg.
Edison bulb asymmetrical \\\\texttt{keffiyeh} schlitz iceland put a bird on it hoodie affogato.

Tofu tote bag distillery viral knausgaard, health goth asymmetrical.
\\\\end{Quotation}



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{\\\\sout{third} 1}


Art party keytar godard iceland neutra cronut. Austin \\\\textsuperscript{readymade} semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



\\\\texttt{foo
bar}



\\\\begin{Quotation}
\\\\texttt{fo\\\\textbackslash{}o
bar}
\\\\end{Quotation}



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{\\\\sout{fo}u\\\\textbf{r}t\\\\textit{h} \\\\textit{1}}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street \\\\textsubscript{a\\\\textit{r}}\\\\textsuperscript{t} drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, \\\\textsubscript{art} party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`mix-2 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


\\\\begin{Quotation}[Quotation Source]
Code inside quote

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{code source}
\\\\end{Quotation}



\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{First \\\\keys{CTRL}+\\\\keys{S}}



Code: Second



\\\\begin{CodeBlock}{python}
print('code without caption')
\\\\end{CodeBlock}"
`;

exports[`mix-3 1`] = `
"\\\\part{right-aligned list}



\\\\begin{flushright}
\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\end{itemize}

\\\\end{flushright}


\\\\part{centered list}



\\\\begin{center}
\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\item item
\\\\end{itemize}

\\\\end{center}


\\\\part{left list}




\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\item item
\\\\end{itemize}"
`;

exports[`mix-4 1`] = `
"\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Sub & Headings & \\\\abbr{ABBR}{abbreviation} \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{column spanning} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{The new table \\\\abbr{ABBR}{abbreviation} \\\\textsuperscript{\\\\ref{footnote:foot}} with \\\\keys{CTRL} + \\\\keys{S}}



\\\\footnotetext[foot]{\\\\label{footnote:foot} a foot}

\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 2}|p{\\\\dimexpr(\\\\linewidth) / 2}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & image \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
space & \\\\image{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 2}|p{\\\\dimexpr(\\\\linewidth) / 2}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & code \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
inline & \\\\texttt{inline} br \\\\par \\\\texttt{inline} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
block & [] \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{E} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{E} &  \\\\\\\\ \\\\cline{2-4}
\\\\rowfont[l]{}
 & F & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / \\\\number-of-column}|}{G} \\\\\\\\ \\\\hline
a & b & \\\\multirow{2}{*}{c   d \\\\par  \\\\par g} \\\\\\\\ \\\\cline{1-2}
e & f &  &  \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{Table Headings} & Here \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Sub & Headings & Too \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{column spanning} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{E} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|p{\\\\dimexpr(\\\\linewidth) / 3}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{3}{*}{A} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 3}|}{B} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & C & D \\\\\\\\ \\\\cline{2-3}
 & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / \\\\number-of-column}|}{E} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{E} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{F} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|p{\\\\dimexpr(\\\\linewidth) * 4 / 4}|}{G} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{4}{|p{\\\\dimexpr(\\\\linewidth) * 4 / 4}|}{A} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{B} & \\\\multicolumn{2}{|p{\\\\dimexpr(\\\\linewidth) * 2 / 4}|}{C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|p{\\\\dimexpr(\\\\linewidth) / 18}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
H & \\\\multicolumn{16}{|p{\\\\dimexpr(\\\\linewidth) * 16 / 18}|}{} & He \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Li & Be & \\\\multirow{2}{*}{} & B & C & N & O & F & Ne \\\\\\\\ \\\\cline{1-2} \\\\cline{13-18}
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\ \\\\hline
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\ \\\\hline
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\ \\\\hline
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\ \\\\hline
Fr & Ra & ACT & \\\\multicolumn{15}{|p{\\\\dimexpr(\\\\linewidth) * 15 / 18}|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{18}{|p{\\\\dimexpr(\\\\linewidth) * 18 / 18}|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|p{\\\\dimexpr(\\\\linewidth) * 3 / 18}|}{Lanthanide} & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|p{\\\\dimexpr(\\\\linewidth) * 3 / 18}|}{Actinide} & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 1}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the end



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 1}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the



\\\\begin{longtabu}{|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|p{\\\\dimexpr(\\\\linewidth) / 4}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
a & \\\\multirow{2}{*}{} &  \\\\\\\\ \\\\cline{1-1}
\\\\rowfont[l]{}
b &  &  & c \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{multirow}



\\\\part{Annexes}


\\\\footnote{\\\\label{appendix-1}}
\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}"
`;

exports[`mix-5 1`] = `
"\\\\image{http://www.numerama.com/content/uploads/2016/07/espace.jpg}[espace\\\\textsuperscript{\\\\ref{footnote:node}}]


\\\\footnotetext[node]{\\\\label{footnote:node} Two things are infinite: the universe and human stupidity.}"
`;

exports[`mix-6 1`] = `
"\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


Video: a caption



\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


no caption"
`;

exports[`paragraph 1`] = `
"\\\\part{first 1}


Disrupt asymmetrical unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue bottle craft beer hexagon artisan. Chia gochujang crucifix, readymade hammock blog succulents sriracha raw denim scenester cray typewriter fashion axe art party. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street art typewriter.



\\\\chapter{second 1}


Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street art synth. Godard synth truffaut selfies, vape fanny pack subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial YOLO. Williamsburg salvia photo booth readymade listicle man braid.



Marfa pickled helvetica put a bird on it hot chicken williamsburg. Edison bulb asymmetrical keffiyeh schlitz iceland put a bird on it hoodie affogato. Tofu tote bag distillery viral knausgaard, health goth asymmetrical.



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{third 1}


Art party keytar godard iceland neutra cronut. Austin readymade semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{fourth 1}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street art drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, art party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`regression: code block without language 1`] = `
"\\\\begin{CodeBlock}{text}
a
\\\\end{CodeBlock}

"
`;

exports[`table 1`] = `
"\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
1 & 2 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
1 & 2 & 3 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;
